# Rust-REST-API-Playground

./: Cargo.toml  Readme.md  index.html
src/: main.rs
ui/: main_window.slint
