[package]
name = "statistics_analyzer"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/main.rs"
crate-type = ["cdylib"]

[dependencies]
slint = "1.14" 

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = "0.2"
getrandom = { version = "0.2.14", features = ["js"] }

[build-dependencies]
slint-build = "1.14"